add ranking page

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -8,7 +8,8 @@
 
 
 <body>
-  <h1>Some famous Computer Scientists</h1>
+  <h1>Welcome to the statistic world of Tennis</h1>
+  <h2>Top Ranking Tennis Players</h2>
   <div>{{data}}</div>
 
   <div>
