--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -4,12 +4,14 @@
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+      <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
     <style type="text/css">
       .container {
         max-width: 500px;
         padding-top: 100px;
       }
       h2 {color: red;}
+
     </style>
   </head>
   <body>
