add history_score & ranking

--- a/webserver/static/styles.css
+++ b/webserver/static/styles.css
@@ -24,3 +24,9 @@ font-size: 12px;
 font-family: Verdana;
 font-weight: bold;
 }
+
+.line {
+  fill: none;
+  stroke: red;
+  stroke-width: 1.5px;
+}
