--- a/webserver/templates/ranking.html
+++ b/webserver/templates/ranking.html
@@ -1,23 +1,27 @@
 {% extends "layout.html" %}
 {% block content %}
-  <h2> Welcome To Tennis Stat!</h2>
-  <h3>This is the ranking page.</h3>
-  <br>
-  <p>Below is the top 10 players on the ranking board.</p>
+<h2> Welcome To Tennis Stat!</h2>
+<h3>This is the ranking page.</h3>
+<br>
+<p>Below is the top 10 players on the ranking board.</p>
 <table id = 'ranking'>
     <thead>
     <th>Name</th>
     <th>Score</th>
     <th>Ranking</th>
-</thead>
-{% for item in top_10 %}
-<TR>
-   <TD class="name">{{item.name}}</TD>
-   <TD class="score">{{item.score}}</TD>
-   <TD class="ranking">{{item.rank}}</TD>
-</TR>
-{% endfor %}
+    </thead>
+    {% for item in top_10 %}
+    <TR>
+        <TD class="name">{{item.name}}</TD>
+        <TD class="score">{{item.score}}</TD>
+        <TD class="ranking">{{item.rank}}</TD>
+    </TR>
+    {% endfor %}
 </table>
 
-  <!--<h3> This is the end of my child template</h3>-->
+<form method="POST" action="/ranking/querydate">
+    <p>Select date: <input type="text" name="name" value = '2018-03-09'><input type="submit" value="Go"></p>
+</form>
+<!--<p>{{week}}</p>-->
+<!--<h3> This is the end of my child template</h3>-->
 {% endblock %}
