add tournament&players landing page

--- a/webserver/templates/layout.html
+++ b/webserver/templates/layout.html
@@ -35,7 +35,7 @@
                 <ul class="nav navbar-nav">
                     {{ nav_link('players', 'Players') }}
                     {{ nav_link('ranking', 'Rankings') }}
-                    {{ nav_link('matches', 'Matches') }}
+                    {{ nav_link('tournaments', 'Tournaments') }}
                 </ul>
             </ul>
             <form class="navbar-form navbar-left" role="search">
