--- a/webserver/templates/player.html
+++ b/webserver/templates/player.html
@@ -4,7 +4,7 @@
     <h2>{{bioinfo['first_name']}}</h2>
     <h1>{{bioinfo['last_name']}}</h1>
     <br>
-    <p>Ranking:4      Nationality: {{bioinfo['nation']}}</p>
+    <p>Ranking:{{rank}}      Nationality: {{bioinfo['nation']}}</p>
     <p>Birthday:{{bioinfo['birthday']}}  Turned_pro: {{bioinfo['turned_pro']}} Weight:{{bioinfo['weight']}} Height:{{bioinfo['height']}}</p>
 </div>
 <div class = 'recent'>
